--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p> Mew mew meouw purr mew mew meow meow mow mow. *paws licking* mew mew meow meow.</p>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Sign up</a>
         </section>
-        <section><img src="../landing page/img/placeholder.jpg" alt="Cat logo"></section>
+        <section><img src="img/placeholder.jpg" alt="Cat logo"></section>
     </main>
     <section class="whiteBackground">
         <h2 id="owners">Owners</h2>
